--- a/src/app/corp/system/user-mgr/user-mgr.component.html
+++ b/src/app/corp/system/user-mgr/user-mgr.component.html
@@ -49,7 +49,7 @@
         <td>{{data.account}}</td>
         <td>{{data.employee.employeeName}}</td>
         <td>{{data.employee.paperId}}</td>
-        <td>{{data.employee.duty.du}}</td>
+        <td>{{data.employee.duty.corpDutyName}}</td>
         <td>
           <a href="javaScript:;" *ngIf="user.isSupperAdmin " (click)="onEdit(data)">修改</a>
           <nz-divider nzType="vertical"></nz-divider>
