--- a/src/app/pub/components/win-school/win-school.component.html
+++ b/src/app/pub/components/win-school/win-school.component.html
@@ -8,13 +8,13 @@
           [nzMaskClosable]="false"
           [nzWidth]="800"
 >
-  <form nz-form>
+
     <div nz-row>
       <div nz-col [nzSpan]="12">
         <nz-form-item>
           <nz-form-label [nzSpan]="6">学校编号</nz-form-label>
           <nz-form-control [nzSpan]="17">
-            <input nz-input [(ngModel)]="currentSchool.schoolId" [ngModelOptions]="{standalone: true}" >
+            <input nz-input [(ngModel)]="currentSchool.schoolId"  >
           </nz-form-control>
         </nz-form-item>
       </div>
@@ -22,7 +22,7 @@
         <nz-form-item>
           <nz-form-label [nzSpan]="6">学校名称</nz-form-label>
           <nz-form-control [nzSpan]="17">
-            <input nz-input [(ngModel)]="currentSchool.schoolName" [ngModelOptions]="{standalone: true}" >
+            <input nz-input [(ngModel)]="currentSchool.schoolName" >
           </nz-form-control>
         </nz-form-item>
       </div>
@@ -50,7 +50,7 @@
         <nz-form-item>
           <nz-form-label [nzSpan]="6">地址</nz-form-label>
           <nz-form-control [nzSpan]="17">
-            <input nz-input [(ngModel)]="currentSchool.address" [ngModelOptions]="{standalone: true}" >
+            <input nz-input [(ngModel)]="currentSchool.address" >
           </nz-form-control>
         </nz-form-item>
       </div>
@@ -64,5 +64,4 @@
       </div>
     </div>
 
-  </form>
 </nz-modal>
