--- a/src/app/pub/components/win-habit/win-habit.component.html
+++ b/src/app/pub/components/win-habit/win-habit.component.html
@@ -8,7 +8,6 @@
           [nzMaskClosable]="false"
           [nzWidth]="800"
 >
-  <form nz-form>
     <div nz-row>
       <div nz-col [nzSpan]="8">
         <nz-form-item>
@@ -38,85 +37,84 @@
     <div nz-row>
       <div nz-col [nzSpan]="24">
         <nz-form-item>
-          <nz-form-label [nzSpan]="6">描述</nz-form-label>
-          <nz-form-control [nzSpan]="17">
-             <textarea></textarea>
+          <nz-form-label [nzSpan]="2">描述</nz-form-label>
+          <nz-form-control [nzSpan]="22">
+             <textarea style="width:98%;height:100px" [(ngModel)]="currentHabit.memo"></textarea>
           </nz-form-control>
         </nz-form-item>
       </div>
     </div>
     <div nz-row>
-      <div nz-col [nzSpan]="24">
+      <div nz-col [nzSpan]="8">
         <nz-form-item>
           <nz-form-label [nzSpan]="6">图片</nz-form-label>
           <nz-form-control [nzSpan]="17">
-            <nz-upload
-              [nzAction]="uploadFilePath"
-              nzListType="picture-card"
-              [(nzFileList)]="picFileList"
-              [nzShowButton]="picFileList.length < 2"
-              [nzPreview]="handleImgPreview">
-              <i nz-icon type="plus"></i>
-              <div class="ant-upload-text">上传图片</div>
-            </nz-upload>
-            <nz-modal  [nzVisible]="previewImgVisible" [nzContent]="modalPicContent" [nzFooter]="null" (nzOnCancel)="previewImgVisible=false;">
-              <ng-template #modalPicContent>
-                <img [src]="previewImage" [ngStyle]="{ 'width': '100%' }"  />
-              </ng-template>
-            </nz-modal>
+            <nz-form-control [nzSpan]="17">
+              <nz-upload
+                [nzAction]="uploadFilePath"
+                nzListType="picture-card"
+                [(nzFileList)]="picFileList"
+                [nzShowButton]="picFileList.length < 1"
+                [nzPreview]="handleImgPreview">
+                <i nz-icon type="plus"></i>
+                <div class="ant-upload-text">上传图片</div>
+              </nz-upload>
+              <nz-modal  [nzVisible]="previewImgVisible" [nzContent]="modalPicContent" [nzFooter]="null" (nzOnCancel)="previewImgVisible=false;">
+                <ng-template #modalPicContent>
+                  <img [src]="previewImage" [ngStyle]="{ 'width': '100%' }"  />
+                </ng-template>
+              </nz-modal>
+            </nz-form-control>
           </nz-form-control>
         </nz-form-item>
       </div>
-    </div>
-    <div nz-row>
-      <div nz-col [nzSpan]="24">
+      <div nz-col [nzSpan]="8">
         <nz-form-item>
           <nz-form-label [nzSpan]="6">视频</nz-form-label>
           <nz-form-control [nzSpan]="17">
-            <nz-upload
-              [nzAction]="uploadFilePath"
-              nzListType="picture-card"
-              [(nzFileList)]="videoFileList"
-              [nzShowButton]="videoFileList.length < 2"
-              [nzPreview]="handleVideoPreview"
-            >
-              <i nz-icon type="plus"></i>
-              <div class="ant-upload-text">上传视频</div>
-            </nz-upload>
-            <nz-modal [nzVisible]="previewVideoVisible" [nzContent]="modalVideoContent" [nzFooter]="null" (nzOnCancel)="previewVideoVisible=false; ">
-              <ng-template #modalVideoContent>
-                <video [src]="previewVideo" [ngStyle]="{ 'width': '100%' }" controls="controls"></video>
-              </ng-template>
-            </nz-modal>
+            <nz-form-control [nzSpan]="17">
+              <nz-upload
+                [nzAction]="uploadFilePath"
+                nzListType="picture-card"
+                [(nzFileList)]="videoFileList"
+                [nzShowButton]="videoFileList.length < 1"
+                [nzPreview]="handleVideoPreview"
+              >
+                <i nz-icon type="plus"></i>
+                <div class="ant-upload-text">上传视频</div>
+              </nz-upload>
+              <nz-modal [nzVisible]="previewVideoVisible" [nzContent]="modalVideoContent" [nzFooter]="null" (nzOnCancel)="previewVideoVisible=false; ">
+                <ng-template #modalVideoContent>
+                  <video [src]="previewVideo" [ngStyle]="{ 'width': '100%' }" controls="controls"></video>
+                </ng-template>
+              </nz-modal>
+            </nz-form-control>
           </nz-form-control>
         </nz-form-item>
       </div>
-    </div>
-
-    <div nz-row>
-      <div nz-col [nzSpan]="24">
+      <div nz-col [nzSpan]="8">
         <nz-form-item>
           <nz-form-label [nzSpan]="6">音频</nz-form-label>
           <nz-form-control [nzSpan]="17">
-            <nz-upload
-              [nzAction]="uploadFilePath"
-              nzListType="picture-card"
-              [(nzFileList)]="audioFileList"
-              [nzShowButton]="audioFileList.length < 2"
-              [nzPreview]="handleAudioPreview"
-            >
-              <i nz-icon type="plus"></i>
-              <div class="ant-upload-text">上传音频</div>
-            </nz-upload>
-            <nz-modal [nzVisible]="previewAudioVisible" [nzContent]="modalAudioContent" [nzFooter]="null" (nzOnCancel)="previewAudioVisible=false; instDetailWin.show();">
-              <ng-template #modalAudioContent>
-                <audio [src]="previewAudio" [ngStyle]="{ 'width': '100%' }" controls="controls"></audio>
-              </ng-template>
-            </nz-modal>
+            <nz-form-control [nzSpan]="17">
+              <nz-upload
+                [nzAction]="uploadFilePath"
+                nzListType="picture-card"
+                [(nzFileList)]="audioFileList"
+                [nzShowButton]="audioFileList.length < 1"
+                [nzPreview]="handleAudioPreview"
+              >
+                <i nz-icon type="plus"></i>
+                <div class="ant-upload-text">上传音频</div>
+              </nz-upload>
+              <nz-modal [nzVisible]="previewAudioVisible" [nzContent]="modalAudioContent" [nzFooter]="null" (nzOnCancel)="previewAudioVisible=false; ">
+                <ng-template #modalAudioContent>
+                  <audio [src]="previewAudio" [ngStyle]="{ 'width': '100%' }" controls="controls"></audio>
+                </ng-template>
+              </nz-modal>
+            </nz-form-control>
           </nz-form-control>
         </nz-form-item>
       </div>
     </div>
-
-  </form>
 </nz-modal>
