--- a/src/app/corp/basemsg/circle/circle.component.html
+++ b/src/app/corp/basemsg/circle/circle.component.html
@@ -62,7 +62,7 @@
 <div class="m-t-sm text-center" nz-row>
   <div nz-col [nzSpan]="24" class="text-center">
     <a href="javaScript:;" class="ant-btn ant-btn-primary" (click)="onQuery()">查询</a>
-    <a class="ant-btn ant-btn-primary m-l-xs" download="学生资源.xls" *ngIf="user.isSupperAdmin "  >excel导出</a>
+    <a class="ant-btn ant-btn-primary m-l-xs" download="学生资源.xls" *ngIf="user.supperAdmin "  >excel导出</a>
   </div>
 </div>
 <div class="m-t-sm" nz-row>
@@ -104,7 +104,7 @@
         <td>{{data.students.length }}</td>
         <td>{{data.closeMan ? '已关闭' :'活跃' }}</td>
         <td>
-          <a href="javaScript:;" *ngIf="user.isSupperAdmin" (click)="onCloseCircle(data)">强制关闭</a>
+          <a href="javaScript:;" *ngIf="user.supperAdmin" (click)="onCloseCircle(data)">强制关闭</a>
         </td>
       </tr>
       </tbody>
