--- a/src/app/corp/basemsg/teacher/teacher.component.html
+++ b/src/app/corp/basemsg/teacher/teacher.component.html
@@ -30,7 +30,7 @@
 <div class="m-t-sm text-center" nz-row>
   <div nz-col [nzSpan]="24" class="text-center">
     <a href="javaScript:;" class="ant-btn ant-btn-primary" (click)="onQuery()">查询</a>
-    <a href="javaScript:;" class="ant-btn ant-btn-primary m-l-xs"  *ngIf="user.isSupperAdmin " (click)="onExcelExport()" >excel导出</a>
+    <a href="javaScript:;" class="ant-btn ant-btn-primary m-l-xs"  *ngIf="user.supperAdmin " (click)="onExcelExport()" >excel导出</a>
   </div>
 </div>
 <div class="m-t-sm" nz-row>
