--- a/src/app/corp/system/user-mgr/user-mgr.component.html
+++ b/src/app/corp/system/user-mgr/user-mgr.component.html
@@ -51,9 +51,9 @@
         <td>{{data.employee.paperId}}</td>
         <td>{{data.employee.duty.corpDutyName}}</td>
         <td>
-          <a href="javaScript:;" *ngIf="user.isSupperAdmin " (click)="onEdit(data)">修改</a>
+          <a href="javaScript:;" *ngIf="user.supperAdmin " (click)="onEdit(data)">修改</a>
           <nz-divider nzType="vertical"></nz-divider>
-          <a href="javaScript:;" *ngIf="user.isSupperAdmin" (click)="onDelete(data)">删除</a>
+          <a href="javaScript:;" *ngIf="user.supperAdmin" (click)="onDelete(data)">删除</a>
         </td>
       </tr>
       </tbody>
