--- a/src/app/corp/system/employee-mgr/employee-mgr.component.html
+++ b/src/app/corp/system/employee-mgr/employee-mgr.component.html
@@ -71,9 +71,9 @@
         <td>{{data.tel}}</td>
         <td>{{data.saleMan.dutyName}}</td>
         <td>
-          <a href="javaScript:;" *ngIf="user.isSupperAdmin " (click)="onEdit(data)">修改</a>
+          <a href="javaScript:;" *ngIf="user.supperAdmin " (click)="onEdit(data)">修改</a>
           <nz-divider nzType="vertical"></nz-divider>
-          <a href="javaScript:;" *ngIf="user.isSupperAdmin" (click)="onDelete(data)">删除</a>
+          <a href="javaScript:;" *ngIf="user.supperAdmin" (click)="onDelete(data)">删除</a>
         </td>
       </tr>
       </tbody>
