--- a/src/app/corp/system/school-admin-mgr/school-admin-mgr.component.html
+++ b/src/app/corp/system/school-admin-mgr/school-admin-mgr.component.html
@@ -1,3 +1,71 @@
-<p>
-  school-admin-mgr works!
-</p>
+
+
+<div class="m-t-sm text-center" nz-row>
+  <div nz-col [nzSpan]="24" class="text-center">
+    <a href="javaScript:;" class="ant-btn ant-btn-primary" (click)="onQuery()">查询</a>
+    <a href="javaScript:;" class="ant-btn ant-btn-primary" (click)="onAdd()">新增</a>
+  </div>
+</div>
+<div class="m-t-sm" nz-row>
+  <div nz-col [nzSpan]="24">
+    <nz-table
+      #ajaxTable
+      nzBordered
+      nzShowSizeChanger
+      [nzFrontPagination]="false"
+      [nzData]="userArray"
+    >
+      <thead >
+      <tr>
+        <th>序号</th>
+        <th>账号</th>
+        <th>所属学校</th>
+        <th>操作</th>
+      </tr>
+      </thead>
+      <tbody>
+      <tr *ngFor="let data of ajaxTable.data ;let no=index">
+        <td>{{no+1}}</td>
+        <td>{{data.account}}</td>
+        <td>{{data.manageSchool?.schoolName}}</td>
+        <td>
+          <a href="javaScript:;" *ngIf="user.supperAdmin " (click)="onEdit(data)">修改</a>
+          <nz-divider nzType="vertical"></nz-divider>
+          <a href="javaScript:;" *ngIf="user.supperAdmin" (click)="onDelete(data)">删除</a>
+        </td>
+      </tr>
+      </tbody>
+    </nz-table>
+  </div>
+</div>
+
+<nz-modal [(nzVisible)]="isUserModalShow"
+          [nzTitle]="'科目'"
+          [nzCancelText]="'关闭'"
+          (nzOnCancel)="isUserModalShow=false"
+          [nzOkText]="'保存'"
+          (nzOnOk)="onSave()"
+          [nzMaskClosable]="false"
+          [nzWidth]="500"
+>
+
+  <div nz-row>
+    <div nz-col [nzSpan]="8">
+      <nz-form-item>
+        <nz-form-label [nzSpan]="6">账号</nz-form-label>
+        <nz-form-control [nzSpan]="17">
+          <input nz-input [(ngModel)]="currentUser.account"  >
+        </nz-form-control>
+      </nz-form-item>
+    </div>
+    <div nz-col [nzSpan]="8">
+      <nz-form-item>
+        <nz-form-label [nzSpan]="6">所属学校</nz-form-label>
+        <nz-form-control [nzSpan]="17">
+           <app-school-select  [(ngModel)]="currentUser.manageSchool.schoolId"></app-school-select>
+        </nz-form-control>
+      </nz-form-item>
+    </div>
+
+  </div>
+</nz-modal>
