--- a/src/app/pub/components/habit-class-select/habit-class-select.component.html
+++ b/src/app/pub/components/habit-class-select/habit-class-select.component.html
@@ -1,7 +1,7 @@
 <nz-select [(ngModel)]="currentValue" class="form-input fullWidth">
-  <nz-option nzValue="1" nzLabel="德"></nz-option>
-  <nz-option nzValue="2" nzLabel="智"></nz-option>
-  <nz-option nzValue="3" nzLabel="体"></nz-option>
-  <nz-option nzValue="4" nzLabel="美"></nz-option>
-  <nz-option nzValue="5" nzLabel="劳"></nz-option>
+  <nz-option [nzValue]="'1'" nzLabel="德"></nz-option>
+  <nz-option [nzValue]="'2'" nzLabel="智"></nz-option>
+  <nz-option [nzValue]="'3'" nzLabel="体"></nz-option>
+  <nz-option [nzValue]="'4'" nzLabel="美"></nz-option>
+  <nz-option [nzValue]="'5'" nzLabel="劳"></nz-option>
 </nz-select>
