--- a/src/app/pub/components/win-employee/win-employee.component.html
+++ b/src/app/pub/components/win-employee/win-employee.component.html
@@ -8,13 +8,13 @@
           [nzMaskClosable]="false"
           [nzWidth]="800"
 >
-  <form nz-form>
+
     <div nz-row>
       <div nz-col [nzSpan]="12">
         <nz-form-item>
           <nz-form-label [nzSpan]="6">身份证</nz-form-label>
           <nz-form-control [nzSpan]="17">
-            <input nz-input [(ngModel)]="currentEmployee.paperId" [ngModelOptions]="{standalone: true}" >
+            <input nz-input [(ngModel)]="currentEmployee.paperId" >
           </nz-form-control>
         </nz-form-item>
       </div>
@@ -22,7 +22,7 @@
         <nz-form-item>
           <nz-form-label [nzSpan]="6">名称</nz-form-label>
           <nz-form-control [nzSpan]="17">
-            <input nz-input [(ngModel)]="currentEmployee.employeeName" [ngModelOptions]="{standalone: true}" >
+            <input nz-input [(ngModel)]="currentEmployee.employeeName"  >
           </nz-form-control>
         </nz-form-item>
       </div>
@@ -32,7 +32,7 @@
         <nz-form-item>
           <nz-form-label [nzSpan]="6">联系电话</nz-form-label>
           <nz-form-control [nzSpan]="17">
-            <input nz-input [(ngModel)]="currentEmployee.tel" [ngModelOptions]="{standalone: true}" >
+            <input nz-input [(ngModel)]="currentEmployee.tel" >
 
           </nz-form-control>
         </nz-form-item>
@@ -41,11 +41,11 @@
         <nz-form-item>
           <nz-form-label [nzSpan]="6">职务</nz-form-label>
           <nz-form-control [nzSpan]="17">
-            <input nz-input [(ngModel)]="currentEmployee.duty" [ngModelOptions]="{standalone: true}" >
+            <app-corp-duty-select [(ngModel)]="currentEmployee.duty.corpDutyId" [defaultShow]="'请选择'"></app-corp-duty-select>
           </nz-form-control>
         </nz-form-item>
       </div>
     </div>
 
-  </form>
+
 </nz-modal>
