--- a/src/app/school/basemsg/school-classes/school-classes.component.html
+++ b/src/app/school/basemsg/school-classes/school-classes.component.html
@@ -2,7 +2,7 @@
 
 <div class="m-t-sm text-center" nz-row>
   <div nz-col [nzSpan]="24" class="text-center">
-    <a href="javaScript:;" class="ant-btn ant-btn-primary" (click)="onRegist()">添加</a>
+    <a href="javaScript:;" class="ant-btn ant-btn-primary" (click)="onAdd()">添加</a>
   </div>
 </div>
 <div class="m-t-sm" nz-row>
@@ -12,7 +12,7 @@
       nzBordered
       nzShowSizeChanger
       [nzFrontPagination]="false"
-      [nzData]="schoolList$ | async"
+      [nzData]="classesArray$ | async"
     >
       <thead >
       <tr>
@@ -21,7 +21,8 @@
         <th>年级</th>
         <th>班级</th>
         <th>班主任</th>
-        <th>学生数</th>
+        <th>任课老师</th>
+        <th>学生</th>
         <th>操作</th>
       </tr>
       </thead>
@@ -32,6 +33,7 @@
         <td>{{commonsvr.calculateGradeMiddleSchool(data.grade)}}</td>
         <td>{{data.classes}}</td>
         <td>{{data.headmaster.teacherName}}</td>
+        <td>{{data.assTeachers.length}}</td>
         <td>{{data.students.length}}</td>
         <td>
           <a href="javaScript:;" *ngIf="user.supperAdmin " (click)="onEdit(data)">修改</a>
@@ -44,5 +46,5 @@
   </div>
 </div>
 
-<app-win-school [schoolWinOrder$]="schoolWinOrder$" (onSchoolSaved)="onSaved($event)"></app-win-school>
+<app-win-classes [classesWinOrder$]="classesWinOrder$"  (onClassesSaved)="onSaved($event)"></app-win-classes>
 
